[gd_scene load_steps=8 format=3 uid="uid://d0cr12y0504x2"]

[ext_resource type="Script" uid="uid://7ag8xgn8apos" path="res://CustomerServiceScreen/Script/player.gd" id="1_10wag"]
[ext_resource type="Texture2D" uid="uid://bpnx4c51m7dbt" path="res://CustomerServiceScreen/FioAssets/customer_service_saigon_portrait_bkgd.png" id="2_xkx15"]
[ext_resource type="Texture2D" uid="uid://bymye1wage1yf" path="res://CustomerServiceScreen/FioAssets/customer_service_screen_saigon_portrait_frame.png" id="3_8uf8m"]
[ext_resource type="Texture2D" uid="uid://cpyjr8g0oevps" path="res://CustomerServiceScreen/Assets/Strawberry_mochi_victory.webp" id="3_vflnw"]
[ext_resource type="Texture2D" uid="uid://b8gbbk73ot0qk" path="res://CustomerServiceScreen/Assets/Strawberry_Mochi_Lobby_Stand.webp" id="4_3jni1"]
[ext_resource type="Texture2D" uid="uid://drrqrvfl5jxie" path="res://CustomerServiceScreen/Assets/Strawberry_mochi_emote.webp" id="5_ieskw"]
[ext_resource type="Texture2D" uid="uid://cadrr8fwohe7q" path="res://CustomerServiceScreen/Assets/Strawberry_mochi_defeat.webp" id="6_mb4q0"]

[node name="Player" type="Node2D"]
script = ExtResource("1_10wag")

[node name="AvatarBG" type="Sprite2D" parent="."]
position = Vector2(1051.3, 555.02)
scale = Vector2(0.27, 0.265)
texture = ExtResource("2_xkx15")

[node name="SaigonHappy" type="Sprite2D" parent="."]
position = Vector2(1052.3, 555.02)
scale = Vector2(0.27, 0.27)
texture = ExtResource("3_vflnw")

[node name="SaigonAnnoyed" type="Sprite2D" parent="."]
position = Vector2(1052.3, 555.02)
scale = Vector2(0.27, 0.27)
texture = ExtResource("4_3jni1")

[node name="SaigonStressed" type="Sprite2D" parent="."]
position = Vector2(1052.3, 555.02)
scale = Vector2(0.27, 0.27)
texture = ExtResource("5_ieskw")

[node name="SaigonDepressed" type="Sprite2D" parent="."]
position = Vector2(1052.3, 555.02)
scale = Vector2(0.27, 0.27)
texture = ExtResource("6_mb4q0")

[node name="AvatarProtrait" type="Sprite2D" parent="."]
position = Vector2(1051.3, 555.02)
scale = Vector2(0.27, 0.27)
texture = ExtResource("3_8uf8m")
