[gd_scene load_steps=12 format=3 uid="uid://th3nm1864cdr"]

[ext_resource type="PackedScene" uid="uid://td5fxgjpepik" path="res://customer_service_GUI.tscn" id="1_urgjv"]
[ext_resource type="Script" uid="uid://7ag8xgn8apos" path="res://player.gd" id="2_6nfhc"]
[ext_resource type="Texture2D" uid="uid://q7j0phglm6gl" path="res://texture/run-1.png" id="2_d8q1g"]
[ext_resource type="Texture2D" uid="uid://bqydad5o4oaoi" path="res://texture/run-2.png" id="3_6nfhc"]
[ext_resource type="Texture2D" uid="uid://dj7ldvstp2x48" path="res://texture/run-3.png" id="4_5um75"]
[ext_resource type="Texture2D" uid="uid://bb4c6rwjnklow" path="res://texture/run-4.png" id="5_tak08"]
[ext_resource type="Texture2D" uid="uid://cp0cfoclsejft" path="res://texture/run-5.png" id="6_ns8ur"]
[ext_resource type="Texture2D" uid="uid://3tqt46sxfa0d" path="res://texture/run-6.png" id="7_piuqq"]
[ext_resource type="Texture2D" uid="uid://u3yfl17vt1ek" path="res://texture/run-7.png" id="8_8650w"]
[ext_resource type="Texture2D" uid="uid://bcpjgr8pjjco6" path="res://texture/run-8.png" id="9_4vibo"]

[sub_resource type="SpriteFrames" id="SpriteFrames_pg8p4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_5um75")
}, {
"duration": 1.0,
"texture": ExtResource("5_tak08")
}],
"loop": true,
"name": &"annoyed",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_8650w")
}, {
"duration": 1.0,
"texture": ExtResource("9_4vibo")
}],
"loop": true,
"name": &"depress",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_d8q1g")
}, {
"duration": 1.0,
"texture": ExtResource("3_6nfhc")
}],
"loop": true,
"name": &"happy",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ns8ur")
}, {
"duration": 1.0,
"texture": ExtResource("7_piuqq")
}],
"loop": true,
"name": &"stress",
"speed": 5.0
}]

[node name="CustomerServiceScene" type="Node2D"]

[node name="GUI" type="CanvasLayer" parent="."]

[node name="CustomerServiceGUI" parent="GUI" instance=ExtResource("1_urgjv")]

[node name="Character" type="Node2D" parent="."]

[node name="Player" type="Node2D" parent="Character"]
script = ExtResource("2_6nfhc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Character/Player"]
position = Vector2(1040, 565)
scale = Vector2(1.80282, 1.77612)
sprite_frames = SubResource("SpriteFrames_pg8p4")
animation = &"depress"
frame_progress = 0.787128

[connection signal="health_changed" from="Character/Player" to="GUI/CustomerServiceGUI" method="_on_player_health_changed"]
